# esp-football

./: .gitignore  PLAN.md  README.md
.github/workflows/: deploy.yml
esp/: CMakeLists.txt  sdkconfig.defaults
esp/main/: CMakeLists.txt  Kconfig.projbuild  esp-football.c  idf_component.yml
lambda-football/: .gitignore  deploy.sh  go.mod  lambda_main.go  local.go  main.go
